2005-12-14  Paolo Bonzini  <bonzini@gnu.org>

	* configure.in: Flip the top-level bootstrap switch.
	* configure: Regenerate.

	Merge from gcc:

	2005-12-14  Daniel Jacobowitz  <dan@codesourcery.com>

        * Makefile.tpl: Throughout the file, use : $(MAKE) along with
        $(stage) and $(unstage).
        (EXTRA_TARGET_FLAGS): Correct double-quoting.
        (all): Remove stray semicolon.
        (local-distclean): Don't handle multilib.tmp and multilib.out.
        (install.all): Set $s for consistency.
        (configure-[+prefix+][+module+]): Instead of [+deps+], handle
        check_multilibs setting.  Always make the install directory.
        (configure-stage[+id+]-[+prefix+][+module+]): Likewise.
        Correct @if/@endif.
        (all-stage[+id+]-[+prefix+][+module+]): Correct @if/@endif.
        ($(TARGET_SUBDIR)/[+module+]/multilib.out): Remove.
        (stage[+id+]-start, stage[+id+]-end): Stage $(TARGET_SUBDIR).
        (multilib.out): Remove.
        * Makefile.in: Regenerated.

2005-12-12  Nathan Sidwell  <nathan@codesourcery.com>

	* config.sub: Replace ms1 arch with mt.  Allow ms1 as alias.
	* configure.in: Replace ms1 arch with mt.
	* configure: Rebuilt.

2005-12-05  Paolo Bonzini  <bonzini@gnu.org>

	Sync with gcc:

2005-12-12  Nathan Sidwell  <nathan@codesourcery.com>

	* config.sub: Replace ms1 arch with mt.  Allow ms1 as alias.
	* configure.in: Replace ms1 arch with mt.
	* configure: Rebuilt.

2005-12-05  Paolo Bonzini  <bonzini@gnu.org>

	Sync with gcc:

	2005-12-05  Paolo Bonzini  <bonzini@gnu.org>

        * configure.in (CONFIGURED_BISON, CONFIGURED_YACC, CONFIGURED_M4,
        CONFIGURED_FLEX, CONFIGURED_LEX, CONFIGURED_MAKEINFO): Remove
        "CONFIGURED_" from the AC_CHECK_PROGS invocation.  Move below.
        Find in-tree tools if available.
        (EXPECT, RUNTEST, LIPO, STRIP): Find them and substitute them.
        (CONFIGURED_*_FOR_TARGET): Don't set nor substitute.
        (*_FOR_TARGET): Set them with GCC_TARGET_TOOL.