@@ -1,3 +1,9 @@
+2005-12-15  Paolo Bonzini  <bonzini@gnu.org>
+
+	* Makefile.tpl (all, do-[+make_target+], do-check, install,
+	install-host-nogcc): Don't invoke $(stage) at the end.
+	* Makefile.in: Regenerate.
+
 2005-12-14  Paolo Bonzini  <bonzini@gnu.org>
 
 	* configure.in: Flip the top-level bootstrap switch.
